# s2-oxcaml

./: .gitignore  .ocamlformat  AGENTS.md  Makefile  PROMPT.md  TODO.md  dune-project  s2.opam
.gemini/: settings.json
bench/: bench_misc.ml  bench_region_coverer.ml  compare.txt  compare_go.py  dune  profile_cap.ml
lib/: dune  earth.ml  earth.mli  exact_arith.ml  float_util.ml  float_util.mli  r1_interval.ml  r1_interval.mli  r2_point.ml  r2_point.mli  r2_rect.ml  r2_rect.mli  r3_vector.ml  r3_vector.mli  s1_angle.ml  s1_angle.mli  s1_chord_angle.ml  s1_chord_angle.mli  s1_interval.ml  s1_interval.mli  s2_boolean_operation.ml  s2_boolean_operation.mli  s2_builder.ml  s2_builder.mli  s2_cap.ml  s2_cap.mli  s2_cell.ml  s2_cell.mli  s2_cell_id.ml  s2_cell_id.mli  s2_cell_union.ml  s2_cell_union.mli  s2_centroids.ml  s2_centroids.mli  s2_closest_edge_query.ml  s2_closest_edge_query.mli  s2_contains_point_query.ml  s2_contains_point_query.mli  s2_contains_vertex_query.ml  s2_contains_vertex_query.mli  (+102 more)
test/: dune  gen_dune.sh  test_earth.ml  test_ocaml_extras.ml  test_r1_interval.ml  test_r2_point.ml  test_r2_rect.ml  test_r3_vector.ml  test_s1_angle.ml  test_s1_chord_angle.ml  test_s1_interval.ml  test_s2_builder.ml  test_s2_cap.ml  test_s2_cell.ml  test_s2_cell_id.ml  test_s2_cell_union.ml  test_s2_centroids.ml  test_s2_closest_edge_query.ml  test_s2_contains_vertex_query.ml  test_s2_convex_hull_query.ml  test_s2_coords.ml  test_s2_crossing_edge_query.ml  test_s2_edge_clipping.ml  test_s2_edge_crosser.ml  test_s2_edge_crossings.ml  test_s2_edge_distances.ml  (+42 more)
(+135 files in other folders)
